--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.33.3"
+    "@types/node": "^17.0.21",
+    "@vercel/ncc": "^0.33.3",
+    "typescript": "^4.5.5"
   }
 }
