--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install Dependencies
-        run: npm i
+        run: yarn install
       - name: Build Release
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
