--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Remove Autogen
-        run: rm lua/ll_plates/sh_autogen.lua
       - name: Setup GLuaLint
         uses: JoshPiper/setup-glualint@main
       - name: Lint
-        run: glualint lua
+        run: which glualint
